# serializer version: 1
# name: test_inner_join_rewriting[session-tracked-inner-join-rewrite-async-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > $1::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-inner-join-rewrite-async-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > %(sweetness_1)s::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-inner-join-rewrite-sync-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color__fruits.sweetness > %(sweetness_1)s::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-inner-join-rewrite-async-asyncpg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > $1::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-inner-join-rewrite-async-psycopg_async_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-inner-join-rewrite-sync-psycopg_engine]
  '''
  SELECT color__fruits.sweetness,
         color__fruits.id,
         color.id AS id_1
    FROM color AS color
    LEFT OUTER JOIN fruit AS color__fruits
      ON color.id = color__fruits.color_id
   WHERE color.created_at > %(created_at_1)s::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
